Add alt text for images and fix a few markup bugs.

--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -120,7 +120,7 @@ next person to come along won&#8217;t be able to tell when any line of code was
 written.</p>
 <p>In short, the flow chart for programming is something like:</p>
 <p><span name="life-cycle"></span></p>
-<p><img src="images/architecture-cycle.png" /></p>
+<p><img src="images/architecture-cycle.png" alt="Get problem &rarr; Learn code &rarr; Code solution &rarr; Clean up &rarr; and back around to the beginning." /></p>
 <aside name="life-cycle">
 
 <p>The fact that there is no escape from that loop is a little alarming now that I
