--- a/html/event-queue.html
+++ b/html/event-queue.html
@@ -82,7 +82,7 @@ work with.</p>
 operating system doesn&#8217;t lose it between when the device driver reported the
 input and when your app gets around to calling <code>getNextEvent()</code>. That
 &#8220;somewhere&#8221; is a <em>queue</em>.</p>
-<p><img src="images/event-queue-loop.png" /></p>
+<p><img src="images/event-queue-loop.png" alt="An event queue. The operating system enqueues Shift, Down, Up, and Click events, and the getNextEvent() function dequeues them." /></p>
 <p>When user input comes in, the OS adds it to a queue of unprocessed events. When
 you call <code>getNextEvent()</code>, it pulls the oldest event off the queue and hands it
 to your application.</p>
@@ -127,7 +127,7 @@ href="http://en.wikipedia.org/wiki/Blackboard_system">blackboard systems</a> in
 the AI field.</p>
 </aside>
 
-<p><img src="images/event-queue-central.png" /></p>
+<p><img src="images/event-queue-central.png" alt="A central event queue is read from and written to by the Combat and Tutorial code." /></p>
 <p>I thought about using this as the example for the rest of the chapter, but I&#8217;m
 not generally a fan of global systems. It is a common technique, but I don&#8217;t
 want you to think that event queues <em>have</em> to be global.</p>
@@ -466,7 +466,7 @@ let&#8217;s get precise on some terms.</p>
 </ul>
 <p>Since <code>playSound()</code> appends new requests at the end of the array, the head
 starts at element zero and the tail grows to the right.</p>
-<p><img src="images/event-queue-queue.png" /></p>
+<p><img src="images/event-queue-queue.png" alt="An array of events. The head points to the first element, and the tail grows to the right." /></p>
 <p>Let&#8217;s code that up. First, we&#8217;ll tweak our fields a bit to make these two
 markers explicit in the class:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Audio</span>
@@ -537,13 +537,13 @@ gets clever.</p>
 <p>Do you want party time to be over? No. You do not.</p>
 </aside>
 
-<p><img src="images/event-queue-crawl.png" /></p>
+<p><img src="images/event-queue-crawl.png" alt="The same array as before but now the head is moving towards the right, leaving available cells on the left." /></p>
 <p>Notice that while the tail is creeping forward, the <em>head</em> is too. That means
 we&#8217;ve got array elements at the <em>beginning</em> of the array that aren&#8217;t being used
 any more. So what we do is wrap the tail back around to the beginning of the
 array when it runs off the end. That&#8217;s why it&#8217;s called a <em>ring</em> buffer: it acts
 like a circular array of cells.</p>
-<p><img src="images/event-queue-ring.png" /></p>
+<p><img src="images/event-queue-ring.png" alt="The array wraps around and now the head can circle back to the beginning." /></p>
 <p>Implementing that is remarkably easy. When we enqueue an item, we just need to
 make sure the tail wraps around to the beginning of the array when it reaches
 the end:</p>
@@ -720,7 +720,7 @@ class="gof-pattern">Observer</a> pattern.</p>
 </li>
 <li>
 <p><strong>If you queue messages:</strong></p>
-<p>A <span name="command">&#8220;message&#8221;</href="observer.html"> or &#8220;request&#8221;
+<p>A <span name="command">&#8220;message&#8221;</span> or &#8220;request&#8221;
 describes an action that we <em>want</em> to happen <em>in the future</em>, like &#8220;play
 sound&#8221;. You can think of this as an asynchronous API to a service.</p>
 <aside name="command">
