--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -60,7 +60,7 @@ free space is <em>fragmented</em> into bits of open curb between half a dozen ca
 </aside>
 
 <p><span name="heap"></span></p>
-<p><img src="images/object-pool-heap-fragment.png" /></p>
+<p><img src="images/object-pool-heap-fragment.png" alt="A series of memory operations leading to fragmentation." /></p>
 <aside name="heap">
 
 <p>Here&#8217;s how a heap becomes fragmented, and how it can cause an allocation to fail
