--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -651,7 +651,7 @@ one by outside code, it just fetches one itself from the service locator.</p>
 <h2><a href="#see-also" name="see-also">See Also</a></h2>
 <ul>
 <li>
-<p>When you apply the <a class="pattern href="update-method.html">Update
+<p>When you apply the <a class="pattern" href="update-method.html">Update
     Method</a> pattern, your update method will very often also be a sandbox
     method.</p>
 </li>
