--- a/html/type-object.html
+++ b/html/type-object.html
@@ -164,10 +164,10 @@ abstract base <code>Monster</code> class, and having each monster in the game be
 instance of that derived breed class mirrors that. We end up with a class
 hierarchy like this:</p>
 <p><span name="inherits-arrow"></span></p>
-<p><img src="images/type-object-subclasses.png" /></p>
+<p><img src="images/type-object-subclasses.png" alt="A Monster base class with derived classes for Dragon, Troll, etc." /></p>
 <aside name="inherits-arrow">
 
-<p>Here, the <img src="images/arrow-inherits.png" class="arrow" /> means &#8220;inherits
+<p>Here, the <img src="images/arrow-inherits.png" class="arrow" alt="A UML arrow representing inheritance." /> means &#8220;inherits
 from&#8221;.</p>
 </aside>
 
@@ -179,10 +179,10 @@ to be compiled in as its own type.</p>
 that each monster <em>has</em> a breed. Instead of subclassing <code>Monster</code> for each
 breed, we have a single <code>Monster</code> class and a single <code>Breed</code> class:</p>
 <p><span name="references-arrow"></span></p>
-<p><img src="images/type-object-breed.png" /></p>
+<p><img src="images/type-object-breed.png" alt="A Monster object has a reference to a Breed object." /></p>
 <aside name="references-arrow">
 
-<p>Here, the <img src="images/arrow-references.png" class="arrow" /> means &#8220;is
+<p>Here, the <img src="images/arrow-references.png" class="arrow" alt="A UML arrow for an object reference." /> means &#8220;is
 referenced by&#8221;.</p>
 </aside>
 
