--- a/html/state.html
+++ b/html/state.html
@@ -207,7 +207,7 @@ paper and start drawing a flowchart. You draw a box for each thing the heroine
 can be doing: standing, jumping, ducking, and diving. When she can respond to a
 button press in one of those states, you draw an arrow from that box, label it
 with that button, and connect it to the state she changes to.</p>
-<p><img src="images/state-flowchart.png"/></p>
+<p><img src="images/state-flowchart.png" alt="A flowchart containing boxes for Standing, Jumping, Diving, and Ducking. Arrows for button presses and releases connect some of the boxes." /></p>
 <p>Congratulations, you&#8217;ve just created a <em>finite state machine</em>. These came out of
 a branch of computer science called <em>automata theory</em> whose family of data
 structures also includes the famous Turing machine. FSMs are the simplest member
@@ -842,7 +842,7 @@ gives you two additional operations:</p>
     the state under it becomes the new current state.</p>
 </li>
 </ol>
-<p><img src="images/state-pushdown.png" /></p>
+<p><img src="images/state-pushdown.png" alt="The stack for a pushdown automaton. First it just contains a Standing state. A Firing state is pushed on top, then popped back off when done." /></p>
 <p>This is just what we need for firing. We create a <em>single</em> firing state. When
 the fire button is pressed while in any other state, we <em>push</em> the firing state
 onto the stack. When the firing animation is done, we <em>pop</em> that state off, and
