--- a/html/update-method.html
+++ b/html/update-method.html
@@ -325,7 +325,7 @@ accidentally skip an object:</p>
 <p>This simple loop increments the index of the object being updated each
 iteration. The left side of the illustration below shows what the array looks
 like while we&#8217;re updating the heroine:</p>
-<p><img src="images/update-method-remove.png"/></p>
+<p><img src="images/update-method-remove.png" alt="A list of entities during a removal. A pointer points to the second entity, Heroine. After the Foul Beast above it is removed, the pointer moves down while the Heroine moves up." /></p>
 <p>Since we&#8217;re updating her, <code>i</code> is 1. She slays the foul beast so it gets removed
 from the array. The heroine shifts up to 0, and the hapless peasant shifts up to
 1. After updating the heroine, <code>i</code> is incremented to 2. As you can see on the
@@ -554,7 +554,7 @@ itself.</p>
 it. This in turn gives us the flexibility to populate the world using something
 like a separate data file or level editor.</p>
 <p><span name="uml"></span></p>
-<p><img src="images/update-method-uml.png"/></p>
+<p><img src="images/update-method-uml.png" alt="A UML diagram. World has a collection of Entities, each of which has an update() method. Skeleton and Statue both inherit from Entity." /></p>
 <aside name="uml">
 
 <p>Do people still care about UML? If so, here&#8217;s what we just created.</p>
@@ -733,7 +733,7 @@ collection that avoids them during your core game loop.</p>
 <li>
 <p>Microsoft&#8217;s <a href="http://creators.xna.com/en-US/">XNA</a> platform uses this pattern
     both in the <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.game.update.aspx"><code>Game</code></a>
-    and <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.gamecomponent.update.aspx"><code>GameComponent</code></a> 
+    and <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.gamecomponent.update.aspx"><code>GameComponent</code></a>
     classes.</p>
 </li>
 <li>
